@startuml

title __CPOA-TP3-MARTIN-BILLARD's Class Diagram__\n

  namespace  {
    class PizzeriaFactory {
    }
  }
  

  namespace  {
    class PizzeriaFactory {
    }
  }
  

  namespace  {
    abstract class Pizza {
    }
  }
  

  namespace  {
    abstract class Pizza {
    }
  }
  

  namespace  {
    class PizzaFromageStyleBrest {
    }
  }
  

  namespace  {
    class PizzaFromageStyleBrest {
    }
  }
  

  namespace  {
    class PizzaFromageStyleStrasboug {
    }
  }
  

  namespace  {
    class PizzaFromageStyleStrasboug {
    }
  }
  

  namespace  {
    class PizzaGrecque {
    }
  }
  

  namespace  {
    class PizzaGrecque {
    }
  }
  

  namespace  {
    class PizzaPoivrons {
    }
  }
  

  namespace  {
    class PizzaPoivrons {
    }
  }
  

  namespace  {
    class PizzaTestDrive {
    }
  }
  

  namespace  {
    class PizzaTestDrive {
    }
  }
  

  namespace  {
    abstract class Pizzeria {
    }
  }
  

  namespace  {
    abstract class Pizzeria {
    }
  }
  

  namespace  {
    class PizzeriaBrest {
    }
  }
  

  namespace  {
    class PizzeriaBrest {
    }
  }
  

  namespace  {
    class PizzeriaStrasbourg {
    }
  }
  

  namespace  {
    class PizzeriaStrasbourg {
    }
  }
  

  namespace  {
    abstract class PizzaFactory {
    }
  }
  

  namespace  {
    abstract class PizzaFactory {
    }
  }
  

  namespace  {
    class PizzaFactoryBrest {
    }
  }
  

  namespace  {
    class PizzaFactoryBrest {
    }
  }
  

  namespace  {
    class PizzaFactoryStrasbourg {
    }
  }
  

  namespace  {
    class PizzaFactoryStrasbourg {
    }
  }
  

  PizzaFromageStyleBrest -up-|> Pizza
  PizzaFromageStyleBrest -up-|> Pizza
  PizzaFromageStyleStrasboug -up-|> Pizza
  PizzaFromageStyleStrasboug -up-|> Pizza
  PizzaGrecque -up-|> Pizza
  PizzaGrecque -up-|> Pizza
  PizzaPoivrons -up-|> Pizza
  PizzaPoivrons -up-|> Pizza
  Pizzeria o-- PizzaFactory : fabrique
  Pizzeria o-- PizzaFactory : fabrique
  PizzeriaBrest -up-|> Pizzeria
  PizzeriaBrest -up-|> Pizzeria
  PizzeriaStrasbourg -up-|> Pizzeria
  PizzeriaStrasbourg -up-|> Pizzeria
  PizzaFactoryBrest -up-|> PizzaFactory
  PizzaFactoryBrest -up-|> PizzaFactory
  PizzaFactoryStrasbourg -up-|> PizzaFactory
  PizzaFactoryStrasbourg -up-|> PizzaFactory


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
